# agentheim

./: .gitignore  AGENTS.md  BASELINE-ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NEXT-TASKS-BY-PRIO.md  PHASE7_AUDIT.md  PHASE7_PLAN.md  PROJECT_OVERVIEW.md  README.md  REPOSITORY_AUDIT_REPORT.md  SECURITY.md  last_steps_dev_plan.md  live-ai-testing.md  pyproject.toml
Agent-Team/: .env.example  .gitignore  README.md  pyproject.toml
Agent-Team/ai_team/: __init__.py  __main__.py  cli.py  config.py  patching.py  policies.py  resume.py  runtime.py  schemas.py  state_machine.py
Agent-Team/ai_team/agents/: __init__.py  base.py  coder.py  orchestrator.py  verifier.py
Agent-Team/ai_team/core/: model_registry.py
Agent-Team/ai_team/integrations/: __init__.py  github_cli.py
Agent-Team/ai_team/providers/: __init__.py  aws_bedrock.py  azure_foundry.py  base.py  oci_genai.py  openai_v1.py
Agent-Team/ai_team/repo/: __init__.py  context_pack.py  redaction.py  scanner.py
Agent-Team/ai_team/reports/: __init__.py  markdown.py
Agent-Team/ai_team/tools/: __init__.py  (+3 more)
Agent-Team/docs/: ARCHITECTURE.md  CLI_RUNBOOK.md  SAFETY.md  TROUBLESHOOTING.md  USAGE.md
Agent-Team/tests/: test_command_detect.py  test_config.py  test_fix_loop.py  test_json_repair.py  test_ledger_paths.py  test_model_registry.py  test_patching.py  test_planning_agent.py  test_policies.py  test_providers.py  test_redaction.py  test_resume_report.py  test_run_runtime.py  test_schemas.py  test_state_machine.py  test_tools.py  test_verifier_schema.py  test_workflow_base.py
(+394 files in other folders)
