[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-team"
version = "0.1.0"
description = "Local-first three-agent coding team runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_team*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
